traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:5: error: not found: value y
    if (x == 6 & y == 6){
                 ^TraversalZigZag:6: error: not found: value y
      setPos(x,y)
               ^